# whisper-turbo-desktop

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  bootstrap_main.py  main.py  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
assets/config/: default_settings.json
docs/: BOOTSTRAP_INSTALLER_PLAN.md  RELEASE_CHECKLIST.md
packaging/: BUILD.md  WhisperTurboDesktop.iss  bootstrap_runtime_hook.py  whisper_turbo_bootstrap.spec  whisper_turbo_desktop.spec
scripts/: build_windows.ps1  run_dev.ps1
src/whisper_turbo_bootstrap/: app.py  runtime.py
src/whisper_turbo_common/: __init__.py  subprocess_utils.py
src/whisper_turbo_desktop/: __main__.py  app.py
src/whisper_turbo_desktop/models/: __init__.py  history.py  queue_task.py  transcription.py
src/whisper_turbo_desktop/services/: __init__.py  diagnostics_service.py  history_service.py  settings_service.py  translation_service.py  whisper_runner.py
src/whisper_turbo_desktop/ui/: __init__.py  main_window.py
src/whisper_turbo_desktop/utils/: __init__.py  logging_utils.py  paths.py  runtime.py
tests/: conftest.py  test_app_cli.py  test_bootstrap_https.py  test_diagnostics_async.py  test_main_window_translation_controls.py  test_queue_ui_refresh.py  test_settings_and_history_services.py  test_startup_imports.py  test_subprocess_utils.py  test_translation_pipeline.py  test_translation_service.py
